--- a/.github/workflows/prod_project-attos.yml
+++ b/.github/workflows/prod_project-attos.yml
@@ -1,24 +1,6 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-name: Install dependencies
-        run: pip install -r project_attos/requirements.txt
-
-name: Cleaning testing files
-        run: |
-          cd project_attos/
-          rm db.sqlite3
-          rm .env
-          cd..
-
-name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            project_attos
-            !venv/
-
 name: Build and deploy Python app to Azure Web App - project-attos
 
 on:
@@ -45,7 +27,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r project_attos/requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -55,6 +37,21 @@ jobs:
           name: python-app
           path: |
             .
+            !venv/
+
+      - name: Cleaning testing files
+        run: |
+          cd project_attos/
+          rm db.sqlite3
+          rm .env
+          cd..
+
+      - name: Upload artifact for deployment jobs
+        uses: actions/upload-artifact@v2
+        with:
+          name: python-app
+          path: |
+            project_attos
             !venv/
 
   deploy:
