--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install Selenium
         run: pip install selenium
 
+      - name: Install Pillow
+        run: python -m pip install Pillow
+
       - name: Run  server e Tests
         run: |
           python project_attos/manage.py runserver &
