--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           python project_attos/manage.py runserver &
                   sleep 5
-          python project_attos/manage.py test app_cantinho
+          python project_attos/manage.py test app_attos
       
 
       - name: Upload artifact for deployment jobs
@@ -56,7 +56,7 @@ jobs:
 
       - name: Cleaning testing files
         run: |
-          cd project_cantinho/
+          cd project_attos/
           rm db.sqlite3
           rm .env
           cd ..
