--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Run  server e Tests
         run: |
-          python project_attos/manage.py runserver &
+          python manage.py runserver &
                   sleep 5
           python project_attos/manage.py test app_attos
       
