--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -41,11 +41,9 @@ jobs:
 
       - name: Run  server e Tests
         run: |
-          cd ..
-          cd project_attos/
-          python manage.py runserver &
+          python project_attos/manage.py runserver &
                   sleep 5
-          python manage.py test app_attos
+          python project_attos/manage.py test app_attos
       
 
       - name: Upload artifact for deployment jobs
