--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -41,9 +41,9 @@ jobs:
 
       - name: Run  server e Tests
         run: |
-          python project_attos/manage.py runserver &
+          python project_attos\manage.py runserver &
                   sleep 5
-          python project_attos/manage.py test app_attos
+          python project_attos\manage.py test app_attos
       
 
       - name: Upload artifact for deployment jobs
