--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -39,17 +39,14 @@ jobs:
       - name: Install Pillow
         run: |
           python -m pip install Pillow
-          python project_attos/manage.py runserver &
-                  sleep 5
-          python project_attos/manage.py test app_attos
           
-      - name: Run  server e Tests
-        run: |
-          python project_attos/manage.py runserver &
-                  sleep 5
-          python project_attos/manage.py test app_attos
-      
+      - name: Run  server
+        run: python project_attos/manage.py runserver 
 
+
+      - name: Run Tests
+        run: python project_attos/manage.py test app_attos
+    
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
