--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run  server e Tests
         run: |
           python project_attos/manage.py runserver &
-                  sleep 5
+                  wait $!
           python project_attos/manage.py test app_attos
     
       - name: Upload artifact for deployment jobs
