--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -1,26 +1,20 @@
-name: Build and deploy Python app to Azure Web App
-
-env:
-  AZURE_WEBAPP_NAME: projetos-attos
-  PYTHON_VERSION: '3.11'             
+name: Build and deploy Python app to Azure Web App - project-attos
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
-
-permissions:
-  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Set up Python version
-        uses: actions/setup-python@v3.0.0
+        uses: actions/setup-python@v1
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
@@ -32,21 +26,17 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r project_attos/requirements.txt
-
+        
       - name: Install Selenium
         run: pip install selenium
 
-      - name: Install Pillow
-        run: |
-          python -m pip install Pillow
-          
       - name: Run  server e Tests
         run: |
-          source venv/bin/activate
-          python manage.py runserver &
-          sleep 5
-          pytest app_attos/
-    
+          python project_attos/manage.py runserver &
+                  sleep 5
+          python project_attos/manage.py test app_cantinho
+      
+
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
@@ -88,6 +78,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'project-attos'
+          app-name: 'projetos-attos'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_86CB65BA00A34F2791F8A891220FEE4C }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C2E34FC4AEC34B42B8A22C80E007B356 }}
