--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           python project_attos/manage.py runserver &
                   sleep 5
-          python project_attos/manage.py test app_cantinho
+          python project_attos/manage.py test app_attos
       
 
       - name: Upload artifact for deployment jobs
