--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -35,7 +35,9 @@ jobs:
 
       - name: Run  server e Tests
         run: |
-          python project_attos/manage.py test app_attos
+          python project_attos/manage.py runserver &
+                  sleep 5
+          python project_attos/manage.py test 
       
 
       - name: Upload artifact for deployment jobs
