--- a/.github/workflows/prod_project-attos.yml
+++ b/.github/workflows/prod_project-attos.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
-          python-version: '3.11'
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
 
       - name: Create and start virtual environment
         run: |
@@ -30,7 +31,8 @@ jobs:
         run: |
           pip install -r project_attos/requirements.txt
           python -m pip install Pillow
-
+            
+        
       - name: Install Selenium
         run: pip install selenium
 
@@ -39,6 +41,13 @@ jobs:
           python project_attos/manage.py runserver &
                   sleep 5
           python project_attos/manage.py test app_attos
+
+      - name: Cleaning testing files
+        run: |
+          cd project_attos/
+          rm db.sqlite3
+          rm .env
+          cd ..
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
