--- a/.github/workflows/prod_project-attos.yml
+++ b/.github/workflows/prod_project-attos.yml
@@ -19,8 +19,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pip'
+          python-version: '3.11'
 
       - name: Create and start virtual environment
         run: |
@@ -31,12 +30,12 @@ jobs:
         run: |
           pip install -r project_attos/requirements.txt
           python -m pip install Pillow
-            
-        
+
+
       - name: Install Selenium
         run: pip install selenium
 
-      - name: Run  server e Tests
+      - name: Run server e Tests
         run: |
           python project_attos/manage.py runserver &
                   sleep 5
